[package]
name = "polynomial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polynomial"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15"
num-traits = "0.2.14"
ahash = "0.7.6"
bitvec = "0.22"
# pyo3 = { version = "0.15.1", features = ["extension-module"] }
# numpy = "0.15"
